crates/ink/tests/ui/selector_id/fail/missing_parameter.rs
const _: u32 = ink::selector_id!();

fn main() {}
