crates/ink/tests/ui/selector_id/fail/missing_parameter.stderr
error: expected exactly 2 arguments (Abi enum, string literal), found 0
 --> tests/ui/selector_id/fail/missing_parameter.rs:1:16
  |
1 | const _: u32 = ink::selector_id!();
  |                ^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `ink::selector_id` (in Nightly builds, run with -Z macro-backtrace for more info)
